Release Notes
=============

Post 2.2beta change list

  ARP
      o Fixed XMLLiteral bug relevant to OWL-S
      o Added workaround for ICU bug.
        The workaround may slow processing of Tamil and other langauges 
        which use Unicode composing characters. If you are processing
        large volumes of Tamil using a patched version of icu4j may be 
        faster. Ask on jena-dev for more information.

  FileGraph and ModelMakerImpl
      o ModelMakerImpl now implements [the obsolescent] createModelOver
        using maker.openModel( ... ) rather than .createModel( ... ). This
        fixes a problem with existing files in the directory not being
        consulted for their contents.

      o FileGraphs now (weakly) support (non-nested) transactions, using
        checkpoint files to record their state at a begin() and restoring
        that state at an abort(). A commit() writes the current state to
        the backing file and deletes the checkpoint.

  InfModelBase (hence, any inference model)
      o Inference models now (weakly) support transactions; they delegate them to
        their base model. Additionally, an abort() will do a rebind().
  
  JMS & ModelSpec
      o Added new modelName property to the vocabulary and schema, ready
        to properly support named models as well as model makers.

      o The specification for RDB models has changed: it is not the maker,
        but it's /hasConnection/ value, that has the connection properties.
        (This allows the connection to be shared, or to be prespecified.)

      o The vocabulary class JMS has been renamed to JenaModelSpec. There
        is a (deprecated) JMS subclass to allow legacy use of the vocabulary.

      o OntModelSpec understands the `modelName` property; it gives the name
        of the model (in the baseModelMaker) which is to be used in a 
        ontModelSpec.create() call.

  PrefixMappings
      o the requirement that adding `(prefix, uri)` to a prefix mapping remove