@@ -7,330 +7,11 @@
 
 
 
-<h1>Jena OWL Syntax Checker HowTo</h1>
 
-<p>This file does not yet document how to:
-</p>
-<ul>
-<li>Use the commandline checker with an OntDocumentManager.
-</li>
-<li>Use an OntDocumentManager with the API.</li>
-<li>Check N3 or N-triple from the commandline</li>
-</ul>
-<p>Use the --help option for an up-to-date synopsis
-of the commandline options.</p>
-
-<h2>Contents</h2>
-
-<ul>
-<li>
-<a href="#intro"> Introduction</a>
-</li>
-<li>
-<a href="#command-line">Command Line Tool</a>
-</li>
-<li>
-<a href="#checker-rslts">Common Java interface</a>
-<li>
-<a href="#Checker">Using with Jena Models, OntModels, and Graphs</a>
-<ul>
-<li>
-<a href="#sample">Sample code</a>
-</li>
-</ul>
-</li>
-<li><a href="#StreamingChecker">Streaming Checker</a></li>
-<li><a href="#Futures">Future Plans</a></li>
-</ul>
-
-<h2><a name="intro"> </a>Introduction</h2>
-<p>
-An OWL Syntax Checker takes a file, Model or Graph and sees 
-whether it conforms with OWL Lite or OWL DL syntax or neither.
-</p>
-<p>
-The basic usage returns a single word being one of "Lite" "DL" or "Full".
-</p>
-<p>
-Error messages can indicate why it is not in a lower level.
-</p>
-<p>
-The Jena OWL syntax checker implements
-the 
-<a href="http://www.w3.org/TR/owl-test/#dfn-OWL-syntax-checker">OWL Syntax Checker</a> defined by the 
-<a href="http://www.w3.org/TR/owl-test/">OWL Test Cases Recommendation</a>.
-</p>
-<p>
-Tests have shown that it is much faster and smaller
-than other syntax checkers
-written in Java. It is believed to be the fastest OWL Syntax Checker.
-However, it does not produce an OWL abstract syntax tree,
-and the error messages are not yet adequately clear.
-</p>
-<p>
-There are three different ways of using the Jena OWL Syntax Checker:
-</p>
-<ol>
-<li>From the command line, using the class <code>jena.owlsyntax</code></li>
-<li>Checking Jena Models and Graphs which have already been
-read in, using <code>com.hp.hpl.jena.ontology.tidy.Checker</code>.
-</li>
-<li>As a standalone Java library,
-for non-Jena applications requiring
-optimized memory usage 
-<code>com.hp.hpl.jena.ontology.tidy.StreamingChecker</code>.
-</li>
-</ol>
-<p>
-Most users should start with the first option,
-and possibly migrate to the second.
-The third case is only useful for specialized applications
-<em>needing</em> to make the best possible usage of their memory.
-(Some tests indicate that the <code>Checker</code>
-class is slightly quicker than the <code>StreamingChecker</code>
-class).
-</p>
-<p>
-The Jena Ontology Models, and the
-Jena reasoners <em>do not</em> require
-any specific syntactic conformance for the documents
-they work with, and do not
-require the use of the syntax checker.
-However, restricting your ontology files
-to be OWL Lite or OWL DL may catch many typos
-and silly mistakes, and may improve the style of
-your ontologies. Moreover, greater interoperability
-with other tools is likely if you restrict yourself
-to OWL Lite or OWL DL.
+<p>The Jena OWL Syntax Checker is now a separately downloadable
+<a href="../contrib/contributions.html">contribution</a>.
+The documentation for it is included in that download.
 </p>
 
-<h2><a name="command-line"></a>Command Line Tool</h2>
-
-<p>
-Invoke Java with the normal Jena classpath 
-and the <code>jena.owlsyntax</code>
-class and the following arguments:
-</p>
-<pre>
-    jena.owlsyntax [--lite|--quiet|--dl] [--big|--lang [N-TRIPLE|N3]] [file1] [file2]
-    jena.owlsyntax --help
-    jena.owlsyntax [--textui] --test [ManifestURL]
-</pre>
-<p>
-The first form reports "Lite", "DL", or "Full"
-If two files are specified, then both files are checked, and
-the vocabulary usage by both files together must be separated.
-If no files are specified then standard input is used,
-(in this case, relative URIs and rdf:ID's are resolved
- against <code>&lt;urn:x-jena:syntaxchecker></code>).
- </p>
-
-  -L --lang     Specify N3 or N-TRIPLE input.
-
-  -m --manager  Specify OWL Document Manager.
-
-  --test        Run a test suite - default latest OWL Test publication.
-                URL of file:testing/wg/OWLManifest.rdf uses local copy.
-  --textui      Use the junit.textui instead of the swingui
-   jena.owlsyntax [--lite|--quiet] [--big] [file1] [file2]
-   jena.owlsyntax --help
-   jena.owlsyntax [--textui] --test [ManifestURL]
-
-<dl>
-<dt>
-  -l
- </dt>
- <dt> --lite</dt>
- <dd>     Give error messages for OWL DL or OWL Full constructions.
- </dd> 
-<dt>
-  -d
- </dt>
- <dt> --dl</dt>
- <dd>(default) Give error messages for OWL Full constructions.
- </dd> 
-  <dt>-q</dt><dt> --quiet</dt>
-  <dd>    No error messages.</dd>
-  <dt>
-  -s
-  </dt> 
-  <dt>--short
-  </dt>
-  <dd>    Give short error messages
-                                (Default is long messages for OWL Full constructs only)
-                                </dd>
-                                
-<dt>  -b</dt><dt> --big</dt>
-<dd>      Input file is big: optimize memory usage.
-
-                                Quality of long error messages suffers.
-</dd>
-
-<dt>-L</dt>
-<dt>--lang</dt>     
-<dd>Specify N3 or N-TRIPLE input, note 
-memory optimizations (<code>--big</code>) are not implemented.</dd>
-
-<dt>-m</dt> 
-<dt>--manager</dt>  
-<dd>Specify OWL Document Manager.</dd>
-
-<dt>
-  --test</dt>
-  <dd>        Run a test suite - default latest OWL Test publication.
-                                URL of file:testing/wg/OWLManifest.rdf uses local copy.
-  </dd>
-  <dt>
-  --textui</dt>
-  <dd>      Use the junit.textui instead of the swingui
-</dd>
-</dl>
-<h2><a name="checker-rslts"></a>Common Java interface</h2>
-
-<p>
-The API contains two implementation classes
-<code>Checker</code> and <code>StreamingChecker</code>.
-Both of these implement the same interface
-<code>CheckerResults</code> for reporting the
-results of a syntax check. This gives methods
-to get the one word result, and any error messages.
-Some errors are characterised by a small subgraph that
-exhibits the error. This subgraph can be accessed
-using the <code>SyntaxProblem.problemSubGraph()</code>
-method.
-</p>
-
-<h2><a name="Checker"></a>Using with Jena Models, OntModels, and Graphs</h2>
-<p>
-Most Jena users wishing to use the syntax checker should
-use the <code>Checker</code> class.
-The Javadoc should be referred to for usage details.
-</p>
-<p>
-An issue that should be understood concerns the 
-processing of <code>owl:imports</code>.
-Some Jena Models and Graphs have already 
-processed <code>owl:imports</code> (e.g. a default
-<code>OntModel</code>),
-others have not (e.g. a default <code>Model</code>).
-For ease of use, the principle methods in the <code>Checker</code>
-class <code>add(Model)</code> and <code>add(Graph)</code>,
-inspect their argument to decide
-whether or not it already has had the 
-imports processed or not.
-This inspection is heuristic, but should work with
-Models created using the ModelFactory. 
-However, for production 
-code with custom Models or Graphs you should use
-either <code>addGraphAndImports</code> or
-<code>addRaw</code> depending on whether or not the
-custom graph is already imports closed or not.
-</p>
-<p>
-If the <code>Checker</code> does imports processing
-it uses a private <code>OntDocumentManager</code>
-constructed from the default profile (as shipped, this
-does not redirect any URLs). If you wish to
-use a custom <code>OntDocumentManager</code> to redirect
-some URLs, then construct an <code>OntModel</code>, and then
-add it to the <code>Checker</code>.
-</p>
-<h3><a name="sample"></a>Sample code</h3>
-<pre>
-    // set this boolean to true if error msgs should
-    // indicate why the graph is not in Lite.
-    boolean expectingLite = false;
-    
-    // m can be an OntModel
-    Model m = ...;
-    Writer w; // for error messages.
-    
-
-    
-   // Get a syntax checker
-   Checker chk = new Checker(expectingLite);
-
-   // Add one or more models or graphs.
-   chk.add(m);
-   ...
-   
-   // get result.
-   String subLang = chk.getSubLanguage();
-   ...
-
-   ...
-   // If we do not like the answer we can 
-   // get error messages.
-
-   if (!(subLang.equals("Lite"))) {
-     // There is no explaination offered why something
-     // is in a lower level than expected, only why it 
-     // is in a higher level than expected.
-     Iterator it = chk.getProblems();
-     while (it.hasNext()) {
-       SyntaxProblem sp = (SyntaxProblem) it.next();
-       String s = sp.longDescription();
-
-       w.write(s);
-       w.write("\n");
-     }
-   }
-</pre>
-
-<h2><a name="StreamingChecker"></a>Streaming Checker</h2>
-<p>
-The <code>StreamingChecker</code>
-class is an alternative for users wishing to
-only use the OWL Syntax Checker, without using
-other Jena functionality.
-It is optimised for memory usage,
-and is very slightly slower than the <code>Checker</code>
-class.
-It is a streaming mode parser in that it does not
-remember all the triples from start to finish
-but intelligently discards those which have been
-fully analysed. 
-</p>
-<p>
-If there is a need to redirect the GET requests on any URLs
-being processed as a result of <code>owl:imports</code>,
-then the <code>StreamingChecker</code> can be given an
-appropriate <code>OntDocumentManager</code> when it
-is constructed. By default, it uses a private document
-manager, constructed from the default profile.
-</p>
- <h2><a name="Futures"></a>Future Plans</h2>
-<p>
-We have a design for "OWL Tidy" based on the syntax checker.
-This would take an OWL Full document, and produce a similar OWL DL
-document. The user would have fine-grain control as to whether
-they allow some information to be lost (incomplete) or some information
-to be added (unsound).
-</p>
-<p>Implementing this would also involve significant improvements in the
-error messages in the syntax checker.</p>
-<p>We also have a design for implementing a syntax checker that
-actually builds abstract syntax trees.</p>
-<p>Our current (May 2004) assessment, is that it is not a good use
-of our time to code up such designs.
-Building abstract syntax trees is adequately addressed by Bechhofer's
-syntax checker.
-OWL Tidy would be useful, if Jena users wanted to be able to interoperate
-with OWL DL systems. We see no such demand at the moment; this may be 
-partly explicable by the lack of widely used OWL DL systems.
-We are aware of some standards developers and similar who would like
-an OWL Tidy functionality; however as far as we can tell, they would
-require the modifications to be small modifications to the source files,
-not small modifications to the RDF graph. Since this more than doubles the
-amount of work required for OWL Tidy, it makes the cost/benefit analysis
-unfavourable.
-</p>
-<p>Users who would like more effort spent by the jena team in this
-area should indicate on jena-dev. Messages indicating unhappiness
-with the current syntax checker's error messages; or
-asking why is some file in OWL Full and not DL and 
-what can be done about it; or how to interoperate
-with some named OWL DL system; are likely to be the most effective.
-</p>
 </BODY>
 </HTML>
